tests/ui/threads-sendsync/rc-is-not-send.stderr
error[E0277]: `Rc<()>` cannot be sent between threads safely
  --> $DIR/rc-is-not-send.rs:25:19
   |
LL |       thread::spawn(move || {
   |       ------------- ^------
   |       |             |
   |  _____|_____________within this `{closure@$DIR/rc-is-not-send.rs:25:19: 25:26}`
   | |     |
   | |     required by a bound introduced by this call
LL | |
LL | |         let y = x;
LL | |         println!("{:?}", y);
LL | |     });
   | |_____^ `Rc<()>` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/rc-is-not-send.rs:25:19: 25:26}`, the trait `Send` is not implemented for `Rc<()>`
note: required because it appears within the type `Port<()>`
  --> $DIR/rc-is-not-send.rs:7:8
   |
LL | struct Port<T>(Rc<T>);
   |        ^^^^
note: required because it appears within the type `Foo`
  --> $DIR/rc-is-not-send.rs:10:8
   |
LL | struct Foo {
   |        ^^^
note: required because it's used within this closure
  --> $DIR/rc-is-not-send.rs:25:19
   |
LL |     thread::spawn(move || {
   |                   ^^^^^^^
note: required by a bound in `spawn`
  --> $SRC_DIR/std/src/thread/mod.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
